# study

./: .gitignore
c#/netinfo/: a.txt  netinfo.cs
c++/c11/mingw/mfc/src/: CMakeLists.txt  main.cpp
c++/c11/mingw/mfc/src/main/: CMakeLists.txt  main.cpp
c++/c11/mingw/mfc/src/test1/: CMakeLists.txt
c++/c11/mingw/mfc/src/test2/: CMakeLists.txt  test2.cpp
c++/c11/mingw/qt/: CMakeLists.txt
c++/c11/mingw/qt/ch02/ex1/HelloWorld/: HelloWorld.pro  hellodialog.ui
c++/c11/mingw/qt/ch02/ex2/HelloWorld/: main.cpp
c++/c11/mingw/qt/ch03/ex2/MyWidget/: mywidget.cpp  mywidget.h  mywidget.ui
c++/c11/mingw/qt/ch03/ex3/MyDialog/: en_US.ts  main.cpp  mystddialog.h  mystddialog.ui  mywidget.ui
c++/c11/mingw/qt/ch09/ex1/MyI18N/: MyI18N.pro  main.cpp  mainwindow.ui
c++/c11/mingw/qt/inc/modshare/: module.h
c++/c11/mingw/qt/src/: CMakeLists.txt
c++/c11/mingw/qt/src/main/: CMakeLists.txt
c++/c11/mingw/template/: CMakeLists.txt
c++/c11/mingw/template/inc/: readme.txt
c++/c11/mingw/template/src/: CMakeLists.txt
c++/c11/mingw/template/src/modshare/: CMakeLists.txt
c++/gcc/qt/: Makefile  Makefile.Release  cqt.pro
c++/mingw/bk00/basic/: CMakeLists.txt
c++/mingw/bk00/basic/src/: CMakeLists.txt  cbasic.cpp  inputstudy.h  main.cpp
c++/mingw/bk00/mfc/: CMakeLists.txt
c++/mingw/bk00/mfc/inc/test1/: test1.h  test1module.h
c++/mingw/bk00/mfc/inc/test2/: test2.h
c++/mingw/bk00/mfc/src/main/: CMakeLists.txt
c++/mingw/bk00/mfc/src/test1/: CMakeLists.txt  test1.cpp
c++/vc/MfcLearn/: .cproject  .project
c++/vc/log4cpp/: ReadMe.txt  log4cpp.properties  stdafx.cpp  testlog4cpp.sln  testlog4cpp.vcproj
c++/vc/mfc/: .cproject  .project
c++/vc/stlport/: ReadMe.txt  StdAfx.cpp  StdAfx.h  TestSTLPort.cpp  TestSTLPort.dsp  TestSTLPort.dsw
java/: bookname.txt
java/Android权威指南/: Android权威指南.ipr  Android权威指南.iws
java/Android权威指南/ch02/: AndroidManifest.xml  build.xml  local.properties
java/Android权威指南/ch04/: AndroidManifest.xml
java/Android权威指南/ch05/: AndroidManifest.xml  build.xml
java/android/: .project  AndroidManifest.xml  pom.xml
java/android-it/: .classpath  AndroidManifest.xml
java/android/android/: pom.xml
java/android/android-it/: pom.xml
java/bk00/: pom.xml
java/bk01/: pom.xml
java/bk02/: pom.xml
java/bk03/: pom.xml
java/bk04/: pom.xml
java/bk05/: AndroidManifest.xml  project.properties
java/j2ee/: j2ee.ids  j2ee.ipr  j2ee.iws
java/j2ee/ajax/: pom.xml
java/j2ee/classic/: pom.xml
java/j2ee/html5/: pom.xml
java/j2ee/ssh/: pom.xml
java/sdk6/: bookname.txt
java/sdk6/bk00/: build.gradle  settings.gradle
java/sdk6/bk01/: pom.xml
java/sdk6/bk02/: pom.xml
java/sdk6/bk03/: pom.xml
java/sdk6/bk04/: pom.xml
java/sdk6/bk05/: AndroidManifest.xml  pom.xml
java/sdk6/bk06/: pom.xml
java/study/: pom.xml
java/study/android/: .classpath  .project  AndroidManifest.xml  pom.xml
java/study/android-it/: .classpath  .project  AndroidManifest.xml  pom.xml
java/study/web/: .classpath  .myhibernatedata  .mymetadata  .project  .reverse.properties  .springBeans  Uml.uml  Uml.umldi  hibernate.reveng.xml  pom.xml
java/web/: .project  build.properties  build.xml  pom.xml
java/web/web/: .springBeans
java/web/web00/: .mymetadata  .mystrutsdata  .project  pom.xml
javascript/microblog/: package.json
javascript/site/: 1.html  3.html  4.html  bower.json  frame.html  index.html  navigation.html
javascript/site/bk00/: 20150515_001.html  20150516_002.html  5.html  bootmy.html
javascript/site/static/: config.rb
javascript/site4/: README.md  bower.json  package.json
javascript/site4/app/: index.html
php/5.3/khzj/: oran_imp.php
php/5.3/site0/: demo_array.php  demo_cls.php  demo_func.php  demo_json.php  demo_np.php  demo_php.php  demo_sql.php  demo_sql2.php  demo_sql3.php  formtest.php  funtest.php  heiyeluren.db  import_organ.php  index.html  index.php  sayhello.html  sqloper.php  try.txt
php/5.3/site1/: .htaccess  404.php  admin.php  arthome.php  article.php  category.php  class.php  do.php  global.php  hack.php  index.php  login.php  play.php  post.php  profile.php  read.php  reply.php  report.php  robots.txt  rss.php
php/5.3/site3/: sayhello.php
php/site/: index.php  operator.php  web.config
php/site2/: ajax.php  artlist.php  ck.php  licence.txt  message.php  register.php  search.php  sendpwd.php  web.config
php/site2/admin/: admincp.php  advert.php  cache.php  class.php  editurl.php  left.php  level.php  listener.php  record.php  repair.php  repeat.php  report.php  setbwd.php  settings.php  setuser.php  sharelinks.php  unite.php  upgrade.php  usercheck.php  vodcheck.php
php/site2/js/: function.js  jquery.js
php/site2/lang/: admin_lang_left.php  admin_lang_msg.php  lang_ck.php  lang_refreshto.php  lang_text.php
php/site2/require/: chinese.php  create_object.php  header.php  listener_interface.php  mysql.php  mysqli.php  rss.php  template.php
python/: bookname.txt  setup.cfg  setup.py
python/P2_bk00/: __init__.py
python/P2_bk00/ch00/: getattr.py  (+1 more)
python/P2_bk01/: db.sqlite3  manage.py
python/P3_bk00/: A.py  B.py  ClsA.py  D.py  TestSuper.py  __init__.py  ccal.py  registhotkey.py  setup.py  test.py
python/P3_bk06/: settings.py
python/P3_bk07/: manage.py
python/basic/: Basic.e4p
python/bk00/: __init__.py
python/bk01/: .gitignore  epydoc.cfg
python/bk06/: django.db  settings.py  wsgi.py
python/normal/: bookname.txt
python/py27/: bookname.txt  setup.cfg  setup.py
python/py33/: bookname.txt
python/qt/: QTLearn.e4p
python/tools/: env27.bat  env33.bat  epydoc.bat
(+1361 files in other folders)
